--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,13 @@ spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.username=root
 spring.datasource.password=14022004
 logging.file.path = .
-logging.level.root: WARN
-logging.level.org.springframework: WARN
-logging.level.stackjava.com.sblogging.service: INFO
+logging.level.root= WARN
+logging.level.org.springframework= WARN
+logging.level.stackjava.com.sblogging.service= INFO
 spring.output.ansi.enabled=always
+spring.mail.host= smtp.gmail.com
+spring.mail.username= hop12345b@gmail.com
+spring.mail.password= iyxe jgse ntrc wnli
+spring.mail.port= 587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
